Translate website content to Swedish, update instructor details, and refine meta tags for SEO optimization.

--- a/schedule.html
+++ b/schedule.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Daily training schedule for Westcoast BJJ Camp. Morning yoga, technique sessions, drilling, open mat, and evening activities.">
-    <meta name="keywords" content="BJJ schedule, training timetable, camp schedule, BJJ classes">
+    <meta name="description" content="Dagligt träningsschema för Westcoast BJJ-läger. Morgonyoga, teknikpass, drill, öppet mattande och kvällsaktiviteter.">
+    <meta name="keywords" content="BJJ schema, träningstidtabell, lägerprogram, BJJ-klasser">
     <meta name="author" content="Westcoast BJJ Camp">
     
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     
-    <title>Schedule - Westcoast BJJ Camp</title>
+    <title>Schema - Westcoast BJJ-läger</title>
 </head>
 <body>
     <!-- Navigation -->
@@ -29,14 +29,14 @@
                 <span></span>
             </button>
             <ul class="nav-links" id="navLinks" role="navigation">
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="./schedule.html" class="active">Schedule</a></li>
-                <li><a href="./instructors.html">Instructors</a></li>
-                <li><a href="./pricing.html">Pricing</a></li>
-                <li><a href="./gallery.html">Gallery</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-                <li><a href="./register.html" class="register-btn">Register</a></li>
+                <li><a href="./index.html">Hem</a></li>
+                <li><a href="./about.html">Om Oss</a></li>
+                <li><a href="./schedule.html" class="active">Schema</a></li>
+                <li><a href="./instructors.html">Instruktörer</a></li>
+                <li><a href="./pricing.html">Priser</a></li>
+                <li><a href="./gallery.html">Galleri</a></li>
+                <li><a href="./contact.html">Kontakt</a></li>
+                <li><a href="./register.html" class="register-btn">Anmäl Dig</a></li>
             </ul>
         </div>
     </nav>
@@ -44,8 +44,8 @@
     <!-- Page Header -->
     <section class="page-header">
         <div class="container">
-            <h1>Daily Schedule</h1>
-            <p class="page-subtitle">A perfect balance of training, learning, and recovery</p>
+            <h1>Dagligt schema</h1>
+            <p class="page-subtitle">En perfekt balans mellan träning, lärande och återhämtning</p>
         </div>
     </section>
 
@@ -54,10 +54,10 @@
         <div class="container">
             <div class="schedule-container fade-in">
                 <div class="schedule-day">
-                    <h3>Typical Training Day</h3>
+                    <h3>Typisk träningsdag</h3>
                     <div class="schedule-item">
                         <span class="schedule-time">07:00 - 08:00</span>
-                        <span>Morning yoga and mobility session on the beach</span>
+                        <span>Morgonyoga och rörlighetspass på stranden</span>
                     </div>
                     <div class="schedule-item">
                         <span class="schedule-time">08:00 - 09:00</span>
