Translate HTML content to Swedish and update JavaScript messages for localization.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <!-- Shared head content -->
     <meta charset="UTF-8">
@@ -111,7 +111,7 @@
                         <img src="./images/icons/community.svg" alt="Community icon" width="48" height="48">
                     </div>
                     <h3>Global gemenskap</h3>
-                    <p>Knåt kontakt med BJJ-utövare från hela världen.</p>
+                    <p>Knyt kontakt med BJJ-utövare från hela världen.</p>
                     <a href="./gallery.html" class="card-link">Se galleri →</a>
                 </div>
             </div>
