Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <div class="hero-logo">
-                    <img src="images/westcoastlogo.webp" alt="West Coast BJJ Camp Logo" class="hero-logo-img">
+                    <img src="images/westcoast-logo-transparent.png" alt="West Coast BJJ Camp Logo" class="hero-logo-img">
                 </div>
             </div>
         </section>
