Update instructor profiles to placeholder text and images

--- a/pages/instructors.html
+++ b/pages/instructors.html
@@ -51,62 +51,32 @@
             <div class="container">
                 <div class="features-grid">
                     <div class="card">
-                        <img src="../images/instructor-1.jpg" alt="Magnus Andersson" class="card-image">
+                        <img src="../images/instructor-1.jpg" alt="TBA" class="card-image">
                         <div class="card-content">
-                            <h3 class="card-title">Magnus Andersson</h3>
-                            <p class="card-text"><strong>Svart bälte, 3:e dan</strong></p>
-                            <p class="card-text">Magnus har tränat BJJ i över 15 år och är grundare av Stockholms BJJ Akademi. Han har tävlat internationellt och vunnit flera svenska mästerskap. Specialiserar sig på guard-spel och submissions.</p>
-                            <p class="card-text"><em>Certifierad instruktör sedan 2018</em></p>
+                            <h3 class="card-title">TBA</h3>
+                            <p class="card-text"><strong>TBA</strong></p>
+                            <p class="card-text">TBA</p>
+                            <p class="card-text"><em>TBA</em></p>
                         </div>
                     </div>
 
                     <div class="card">
-                        <img src="../images/instructor-2.jpg" alt="Sofia Lindberg" class="card-image">
+                        <img src="../images/instructor-2.jpg" alt="TBA" class="card-image">
                         <div class="card-content">
-                            <h3 class="card-title">Sofia Lindberg</h3>
-                            <p class="card-text"><strong>Brunt bälte, 1:a dan</strong></p>
-                            <p class="card-text">Sofia är en av Sveriges främsta kvinnliga BJJ-utövare. Hon har representerat Sverige i flera internationella tävlingar och vunnit guld på europeiska mästerskapen. Fokuserar på teknisk precision och taktisk träning.</p>
-                            <p class="card-text"><em>Europamästare 2022</em></p>
+                            <h3 class="card-title">TBA</h3>
+                            <p class="card-text"><strong>TBA</strong></p>
+                            <p class="card-text">TBA</p>
+                            <p class="card-text"><em>TBA</em></p>
                         </div>
                     </div>
 
                     <div class="card">
-                        <img src="../images/instructor-3.jpg" alt="João Santos" class="card-image">
+                        <img src="../images/instructor-6.jpg" alt="TBA" class="card-image">
                         <div class="card-content">
-                            <h3 class="card-title">João Santos</h3>
-                            <p class="card-text"><strong>Svart bälte, 2:a dan</strong></p>
-                            <p class="card-text">João kommer från Brasilien och har över 20 års erfarenhet av BJJ. Han har tränat under världsberömda mästare i Rio de Janeiro. Specialiserar sig på traditionell brasiliansk Jiu-Jitsu och self-defense.</p>
-                            <p class="card-text"><em>Ursprunglig träning i Gracie Barra, Rio de Janeiro</em></p>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <img src="../images/instructor-4.jpg" alt="Erik Johansson" class="card-image">
-                        <div class="card-content">
-                            <h3 class="card-title">Erik Johansson</h3>
-                            <p class="card-text"><strong>Brunt bälte, 2:a dan</strong></p>
-                            <p class="card-text">Erik har bakgrund inom brottning och har anpassat sina takedown-tekniker till BJJ. Han är känd för sina explosiva tekniker och har en unik förmåga att lära ut övergångar mellan olika positioner.</p>
-                            <p class="card-text"><em>Tidigare svensk mästare i brottning</em></p>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <img src="../images/instructor-5.jpg" alt="Anna Karlsson" class="card-image">
-                        <div class="card-content">
-                            <h3 class="card-title">Anna Karlsson</h3>
-                            <p class="card-text"><strong>Lila bälte</strong></p>
-                            <p class="card-text">Anna är specialist på att introducera nybörjare till BJJ. Hon har en pedagogisk bakgrund och förstår hur viktigt det är med rätt grundteknik. Hennes klasser är perfekta för de som är nya inom sporten.</p>
-                            <p class="card-text"><em>Certifierad yogainstruktör och rörlighetscoach</em></p>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <img src="../images/instructor-6.jpg" alt="Michael Berg" class="card-image">
-                        <div class="card-content">
-                            <h3 class="card-title">Michael Berg</h3>
-                            <p class="card-text"><strong>Svart bälte, 1:a dan</strong></p>
-                            <p class="card-text">Michael är en veteran inom kampsport med bakgrund i både BJJ och MMA. Han har tränat professionella fighters och förstår hur BJJ används i olika sammanhang. Specialiserar sig på No-Gi BJJ och MMA-grappling.</p>
-                            <p class="card-text"><em>Tidigare MMA-fighter och cornerman</em></p>
+                            <h3 class="card-title">TBA</h3>
+                            <p class="card-text"><strong>TBA</strong></p>
+                            <p class="card-text">TBA</p>
+                            <p class="card-text"><em>TBA</em></p>
                         </div>
                     </div>
                 </div>
