Implement code changes to enhance functionality and improve performance

--- a/pages/instructors.html
+++ b/pages/instructors.html
@@ -51,7 +51,7 @@
             <div class="container">
                 <div class="features-grid">
                     <div class="card">
-                        <img src="../images/instructor-1.jpg" alt="TBA" class="card-image">
+                        <img src="../images/TBA.png" alt="TBA" class="card-image">
                         <div class="card-content">
                             <h3 class="card-title">TBA</h3>
                             <p class="card-text"><strong>TBA</strong></p>
@@ -61,7 +61,7 @@
                     </div>
 
                     <div class="card">
-                        <img src="../images/instructor-2.jpg" alt="TBA" class="card-image">
+                        <img src="../images/TBA.png" alt="TBA" class="card-image">
                         <div class="card-content">
                             <h3 class="card-title">TBA</h3>
                             <p class="card-text"><strong>TBA</strong></p>
@@ -71,7 +71,7 @@
                     </div>
 
                     <div class="card">
-                        <img src="../images/instructor-6.jpg" alt="TBA" class="card-image">
+                        <img src="../images/TBA.png" alt="TBA" class="card-image">
                         <div class="card-content">
                             <h3 class="card-title">TBA</h3>
                             <p class="card-text"><strong>TBA</strong></p>
