Clear placeholder text for instructor profiles in instructors.html

--- a/pages/instructors.html
+++ b/pages/instructors.html
@@ -54,9 +54,9 @@
                         <img src="../images/TBA.png" alt="TBA" class="card-image">
                         <div class="card-content">
                             <h3 class="card-title">TBA</h3>
-                            <p class="card-text"><strong>TBA</strong></p>
-                            <p class="card-text">TBA</p>
-                            <p class="card-text"><em>TBA</em></p>
+                            <p class="card-text"><strong></strong></p>
+                            <p class="card-text"></p>
+                            <p class="card-text"><em></em></p>
                         </div>
                     </div>
 
@@ -64,9 +64,9 @@
                         <img src="../images/TBA.png" alt="TBA" class="card-image">
                         <div class="card-content">
                             <h3 class="card-title">TBA</h3>
-                            <p class="card-text"><strong>TBA</strong></p>
-                            <p class="card-text">TBA</p>
-                            <p class="card-text"><em>TBA</em></p>
+                            <p class="card-text"><strong></strong></p>
+                            <p class="card-text"></p>
+                            <p class="card-text"><em></em></p>
                         </div>
                     </div>
 
@@ -74,9 +74,9 @@
                         <img src="../images/TBA.png" alt="TBA" class="card-image">
                         <div class="card-content">
                             <h3 class="card-title">TBA</h3>
-                            <p class="card-text"><strong>TBA</strong></p>
-                            <p class="card-text">TBA</p>
-                            <p class="card-text"><em>TBA</em></p>
+                            <p class="card-text"><strong></strong></p>
+                            <p class="card-text"></p>
+                            <p class="card-text"><em></em></p>
                         </div>
                     </div>
                 </div>
