--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -50,7 +50,7 @@
         <section class="content-section">
             <div class="container">
                 <div class="pricing-grid">
-                    <div class="pricing-card">
+                    <!-- <div class="pricing-card">
                         <h3 class="pricing-title">Dagspass</h3>
                         <div class="pricing-price">450 <span style="font-size: 1rem;">SEK</span></div>
                         <p class="pricing-period">Per dag</p>
@@ -64,24 +64,24 @@
                             <li>❌ Ingen camp t-shirt</li>
                         </ul>
                         <a href="booking.html" class="btn btn-primary">Välj Dagspass</a>
-                    </div>
+                    </div> -->
 
                     <div class="pricing-card featured">
                         <h3 class="pricing-title">Fullt Paket</h3>
-                        <div class="pricing-price">2,950 <span style="font-size: 1rem;">SEK</span></div>
+                        <div class="pricing-price">200 <span style="font-size: 1rem;">SEK</span></div>
                         <p class="pricing-period">Hela campen (3 dagar)</p>
                         <ul class="pricing-features">
-                            <li>✅ Alla träningspass alla tre dagar</li>
-                            <li>✅ Alla måltider (frukost, lunch, middag)</li>
-                            <li>✅ Boende i delat rum (2 nätter)</li>
+                            <li>✅ Alla träningspass</li>
                             <li>✅ Exklusiv camp t-shirt</li>
+                            <!-- <li>✅ Alla måltider (frukost, lunch, middag)</li>
+                            <li>✅ Boende i delat rum (2 nätter)</li>
                             <li>✅ Välkomstpaketet med goodies</li>
                             <li>✅ Tillgång till social activities</li>
-                            <li>✅ Certifikat för deltagande</li>
+                            <li>✅ Certifikat för deltagande</li> -->
                         </ul>
                         <a href="booking.html" class="btn btn-primary">Välj Fullt Paket</a>
                     </div>
-
+<!-- 
                     <div class="pricing-card">
                         <h3 class="pricing-title">Baspaket</h3>
                         <div class="pricing-price">1,200 <span style="font-size: 1rem;">SEK</span></div>
@@ -96,7 +96,7 @@
                             <li>❌ Inget boende inkluderat</li>
                         </ul>
                         <a href="booking.html" class="btn btn-primary">Välj Baspaket</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
