--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -101,7 +101,7 @@
             </div>
         </section>
 
-        <section class="content-section">
+        <!-- <section class="content-section">
             <div class="container">
                 <h2 style="text-align: center; margin-bottom: 2rem;">Tilläggstjänster</h2>
                 <div class="table-container">
@@ -143,7 +143,7 @@
                     </table>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section class="content-section">
             <div class="container">
