Update schedule dates to TBA for 2025 in schedule.html

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -49,7 +49,7 @@
 
         <section class="content-section">
             <div class="container">
-                <h2 style="text-align: center; margin-bottom: 2rem;">📅 Fredag 12 Juli 2024</h2>
+                <h2 style="text-align: center; margin-bottom: 2rem;">📅 Fredag TBA 2025</h2>
                 <div class="table-container">
                     <table class="table">
                         <thead>
@@ -61,30 +61,6 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td><strong>14:00-15:00</strong></td>
-                                <td>Incheckning & Registrering</td>
-                                <td>Organisatörer</td>
-                                <td>Välkomstdrink, namnbrickor och materialutdelning</td>
-                            </tr>
-                            <tr>
-                                <td><strong>15:00-16:30</strong></td>
-                                <td>Öppningsceremoni & Introduktion</td>
-                                <td>Alla instruktörer</td>
-                                <td>Välkomst, säkerhetsregler och presentation av instruktörer</td>
-                            </tr>
-                            <tr>
-                                <td><strong>16:30-17:00</strong></td>
-                                <td>Fika & Mingel</td>
-                                <td>-</td>
-                                <td>Lär känna andra deltagare</td>
-                            </tr>
-                            <tr>
-                                <td><strong>17:00-18:30</strong></td>
-                                <td>Grundtekniker för alla nivåer</td>
-                                <td>Anna Karlsson</td>
-                                <td>Fundamentala positioner och rörlighet</td>
-                            </tr>
                             <tr>
                                 <td><strong>18:30-19:30</strong></td>
                                 <td>Middag (endast Fullt Paket)</td>
@@ -111,7 +87,7 @@
 
         <section class="content-section">
             <div class="container">
-                <h2 style="text-align: center; margin-bottom: 2rem;">📅 Lördag 13 Juli 2024</h2>
+                <h2 style="text-align: center; margin-bottom: 2rem;">📅 Lördag TBA 2025</h2>
                 <div class="table-container">
                     <table class="table">
                         <thead>
@@ -197,7 +173,7 @@
 
         <section class="content-section">
             <div class="container">
-                <h2 style="text-align: center; margin-bottom: 2rem;">📅 Söndag 14 Juli 2024</h2>
+                <h2 style="text-align: center; margin-bottom: 2rem;">📅 Söndag TBA 2025</h2>
                 <div class="table-container">
                     <table class="table">
                         <thead>
